kubernetes/istio-ingress-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: aks-istio-system
  labels:
    app: istio-ingressgateway
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: 8080
  - port: 443
    name: https
    targetPort: 8443
  selector:
    app: istio-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: aks-istio-system
  labels:
    app: istio-ingressgateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: istio-ingressgateway
  template:
    metadata:
      labels:
        app: istio-ingressgateway
        istio: istio-proxy
    spec:
      containers:
      - name: istio-proxy
        image: mcr.microsoft.com/oss/istio/proxyv2:1.24.6-distroless
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1337
          runAsNonRoot: true
          runAsUser: 1337
