kubernetes/istio-ingress-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: aks-istio-ingress
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: LoadBalancer
  selector:
    app: istio-proxy
  ports:
  - name: http2
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
