kubernetes/pod-info-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-info-loadbalancer
  namespace: default
  labels:
    app: pod-info
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "snet-aks"
spec:
  type: LoadBalancer
  selector:
    app: pod-info
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
