kubernetes/pod-info-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-info-nodeport
  namespace: default
  labels:
    app: pod-info
spec:
  type: NodePort
  selector:
    app: pod-info
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
