kubernetes/pod-info-public-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-info-public-loadbalancer
  namespace: default
  labels:
    app: pod-info
spec:
  type: LoadBalancer
  selector:
    app: pod-info
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
