kubernetes/private-link-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-gateway-pls
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-pls-create: "true"
    service.beta.kubernetes.io/azure-pls-name: "istio-gateway-pls"
    service.beta.kubernetes.io/azure-pls-ip-configuration-subnet: "snet-private-endpoint"
    service.beta.kubernetes.io/azure-pls-proxy-protocol: "false"
    service.beta.kubernetes.io/azure-pls-visibility: "*"
    service.beta.kubernetes.io/azure-pls-auto-approval: "*"
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
  - port: 80
    targetPort: 8080
    name: http
